--- a/_examples/features/package.json
+++ b/_examples/features/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/example-features",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "main": "index.js",
   "license": "MIT",
   "private": false,
@@ -21,10 +21,10 @@
     "!.DS_Store"
   ],
   "dependencies": {
-    "@minipress/minipress": "^0.1.1-alpha.11",
-    "@minipress/theme-docs": "^0.1.1-alpha.11",
-    "@minipress/plugin-additional-pages": "^0.1.1-alpha.11",
-    "@minipress/plugin-clean-urls": "^0.1.1-alpha.11"
+    "@minipress/minipress": "^0.1.1-alpha.12",
+    "@minipress/plugin-additional-pages": "^0.1.1-alpha.12",
+    "@minipress/plugin-clean-urls": "^0.1.1-alpha.12",
+    "@minipress/theme-docs": "^0.1.1-alpha.12"
   },
   "gitHead": "c7520f1b3a55e5c1d23584224b602564223aaac8"
 }
