--- a/_packages/app/package.json
+++ b/_packages/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/app",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve demo",
@@ -19,19 +19,19 @@
     "!**/__*__/**"
   ],
   "dependencies": {
-    "@minipress/built-in-components": "^0.1.1-alpha.11",
+    "@minipress/built-in-components": "^0.1.1-alpha.12",
     "prismjs": "^1.17.1"
   },
   "peerDependencies": {
-    "webpack-hot-middleware": "^2.25.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-router-prefetch": "^1.6.0",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
-    "@minipress/eslint-config-client": "^0.1.1-alpha.11",
+    "@minipress/eslint-config-client": "^0.1.1-alpha.12",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-plugin-unit-jest": "^3.11.0",
