--- a/_packages/built-in-components/package.json
+++ b/_packages/built-in-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/built-in-components",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve demo",
@@ -21,12 +21,11 @@
   "peerDependencies": {
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1",
-    "vue-router-prefetch": "^1.6.0"
+    "vue-router-prefetch": "^1.6.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "vue-router-prefetch": "^1.6.0",
-    "@minipress/eslint-config-client": "^0.1.1-alpha.11",
+    "@minipress/eslint-config-client": "^0.1.1-alpha.12",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-plugin-unit-jest": "^3.11.0",
@@ -40,6 +39,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-router-prefetch": "^1.6.0",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1"
   },
