--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/minipress",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "main": "src/index.js",
   "license": "MIT",
   "private": false,
@@ -15,45 +15,44 @@
     "minipress": "./src/cli/cli-entry.js"
   },
   "dependencies": {
-    "devalue": "^2.0.0",
-    "joi": "^14.3.1",
-    "@types/joi": "^14.3.3",
-    "less": "^3.10.3",
-    "sass": "^1.22.12",
-    "fibers": "^4.0.1",
-    "core-js": "^2.6.5",
     "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@minipress/app": "^0.1.1-alpha.11",
-    "@minipress/log": "^0.1.1-alpha.11",
-    "@minipress/utils": "^0.1.1-alpha.11",
-    "@minipress/code-gen": "^0.1.1-alpha.11",
-    "@minipress/page-renderer": "^0.1.1-alpha.11",
-    "@minipress/theme-default": "^0.1.1-alpha.11",
-    "@minipress/types": "^0.1.1-alpha.11",
-    "@minipress/head-element": "^0.1.1-alpha.11",
-    "@minipress/plugin-pages": "^0.1.1-alpha.11",
-    "@minipress/plugin-format-vue": "^0.1.1-alpha.11",
-    "@minipress/plugin-format-markdown": "^0.1.1-alpha.11",
+    "@minipress/app": "^0.1.1-alpha.12",
+    "@minipress/code-gen": "^0.1.1-alpha.12",
+    "@minipress/head-element": "^0.1.1-alpha.12",
+    "@minipress/log": "^0.1.1-alpha.12",
+    "@minipress/page-renderer": "^0.1.1-alpha.12",
+    "@minipress/plugin-format-markdown": "^0.1.1-alpha.12",
+    "@minipress/plugin-format-vue": "^0.1.1-alpha.12",
+    "@minipress/plugin-pages": "^0.1.1-alpha.12",
+    "@minipress/theme-default": "^0.1.1-alpha.12",
+    "@minipress/types": "^0.1.1-alpha.12",
+    "@minipress/utils": "^0.1.1-alpha.12",
     "@types/fs-extra": "^8.0.0",
+    "@types/joi": "^14.3.3",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "cac": "^6.5.2",
     "chokidar": "^3.0.2",
+    "core-js": "^2.6.5",
     "critical": "^1.3.6",
     "css-loader": "^3.2.0",
+    "devalue": "^2.0.0",
     "dotenv": "^8.1.0",
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
+    "fibers": "^4.0.1",
     "file-loader": "^4.2.0",
     "fs-extra": "^8.1.0",
     "globby": "^10.0.1",
     "gray-matter": "^4.0.2",
     "hash-sum": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "joi": "^14.3.1",
+    "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.8.0",
@@ -64,6 +63,7 @@
     "postcss-loader": "^3.0.0",
     "prismjs": "^1.17.1",
     "saber-markdown": "^0.1.1",
+    "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "serve-static": "^1.14.1",
     "slugo": "^0.2.3",
@@ -83,27 +83,27 @@
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
     "webpack": "^4.39.2",
+    "webpack-bundle-analyzer": "^3.5.0",
     "webpack-chain": "^6.0.0",
     "webpack-dev-middleware": "^3.7.1",
     "webpack-dev-server": "^3.8.0",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-bundle-analyzer": "^3.5.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "@types/loader-utils": "^1.1.3",
-    "@types/prettier": "^1.18.2",
-    "@types/webpack-hot-middleware": "^2.16.5",
-    "@types/webpack-dev-middleware": "^2.0.3",
-    "@types/hash-sum": "^1.0.0",
-    "@minipress/eslint-config-node": "^0.1.1-alpha.11",
+    "@minipress/eslint-config-node": "^0.1.1-alpha.12",
     "@types/express": "^4.17.1",
+    "@types/hash-sum": "^1.0.0",
+    "@types/jest": "^24.0.18",
+    "@types/loader-utils": "^1.1.3",
     "@types/node": "^12.7.2",
+    "@types/prettier": "^1.18.2",
     "@types/serve-static": "^1.13.3",
     "@types/webpack": "^4.39.0",
+    "@types/webpack-dev-middleware": "^2.0.3",
+    "@types/webpack-hot-middleware": "^2.16.5",
     "eslint": "^6.2.1",
     "eslint-plugin-jest": "^22.17.0",
-    "@types/jest": "^24.0.18",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
   },
