--- a/_packages/plugins/additional-pages/package.json
+++ b/_packages/plugins/additional-pages/package.json
@@ -1,13 +1,11 @@
 {
   "name": "@minipress/plugin-additional-pages",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.11"
+    "@minipress/types": "^0.1.1-alpha.12"
   },
   "keywords": [],
   "author": "",
