--- a/_packages/plugins/clean-urls/package.json
+++ b/_packages/plugins/clean-urls/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@minipress/plugin-clean-urls",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
