--- a/_packages/plugins/components/package.json
+++ b/_packages/plugins/components/package.json
@@ -1,15 +1,11 @@
 {
   "name": "@minipress/plugin-components",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "dependencies": {
     "chokidar": "^3.2.1"
-  },
-  "devDependencies": {
   },
   "keywords": [],
   "author": "",
