--- a/_packages/plugins/format-vue/package.json
+++ b/_packages/plugins/format-vue/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@minipress/plugin-format-vue",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@minipress/utils": "^0.1.1-alpha.11",
-    "@minipress/code-gen": "^0.1.1-alpha.11"
+    "@minipress/code-gen": "^0.1.1-alpha.12",
+    "@minipress/utils": "^0.1.1-alpha.12"
   },
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.11",
+    "@minipress/types": "^0.1.1-alpha.12",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
   },
