--- a/_packages/plugins/head/package.json
+++ b/_packages/plugins/head/package.json
@@ -1,15 +1,9 @@
 {
   "name": "@minipress/plugin-head",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-
-  },
-  "dependencies": {
-  },
-  "devDependencies": {
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
