--- a/_packages/plugins/last-modified/package.json
+++ b/_packages/plugins/last-modified/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@minipress/plugin-last-modified",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "dependencies": {
     "fs-extra": "^8.1.0"
   },
