--- a/_packages/plugins/package-json/package.json
+++ b/_packages/plugins/package-json/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@minipress/plugin-package-json",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
   "dependencies": {
     "fs-extra": "^8.1.0"
   },
   "devDependencies": {
-    "@types/fs-extra": "^8.0.0",
-    "@minipress/types": "^0.1.1-alpha.11"
+    "@minipress/types": "^0.1.1-alpha.12",
+    "@types/fs-extra": "^8.0.0"
   },
   "keywords": [],
   "author": "",
