--- a/_packages/plugins/pages/package.json
+++ b/_packages/plugins/pages/package.json
@@ -1,17 +1,15 @@
 {
   "name": "@minipress/plugin-pages",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "dependencies": {
-    "chokidar": "^3.1.1",
-    "@minipress/utils": "^0.1.1-alpha.11"
+    "@minipress/utils": "^0.1.1-alpha.12",
+    "chokidar": "^3.1.1"
   },
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.11"
+    "@minipress/types": "^0.1.1-alpha.12"
   },
   "keywords": [],
   "author": "",
