--- a/_support/gh-pages/package.json
+++ b/_support/gh-pages/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@minipress/gh-pages",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "index.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "private": false,
   "publishConfig": {
     "access": "public"
