--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/docs",
-  "version": "0.1.1-alpha.11",
+  "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
   "homepage": "https://christiankienle.github.io/minipress/",
@@ -28,14 +28,14 @@
     "access": "public"
   },
   "dependencies": {
-    "@minipress/minipress": "^0.1.1-alpha.11",
-    "@minipress/theme-docs": "^0.1.1-alpha.11",
-    "@minipress/plugin-last-modified": "^0.1.1-alpha.11",
-    "@minipress/plugin-pages": "^0.1.1-alpha.11",
-    "@minipress/plugin-head": "^0.1.1-alpha.11",
-    "@minipress/plugin-components": "^0.1.1-alpha.11",
-    "@minipress/plugin-clean-urls": "^0.1.1-alpha.11",
-    "@minipress/plugin-package-json": "^0.1.1-alpha.11"
+    "@minipress/minipress": "^0.1.1-alpha.12",
+    "@minipress/plugin-clean-urls": "^0.1.1-alpha.12",
+    "@minipress/plugin-components": "^0.1.1-alpha.12",
+    "@minipress/plugin-head": "^0.1.1-alpha.12",
+    "@minipress/plugin-last-modified": "^0.1.1-alpha.12",
+    "@minipress/plugin-package-json": "^0.1.1-alpha.12",
+    "@minipress/plugin-pages": "^0.1.1-alpha.12",
+    "@minipress/theme-docs": "^0.1.1-alpha.12"
   },
   "gitHead": "c7520f1b3a55e5c1d23584224b602564223aaac8"
 }
