--- a/_packages/code-gen/package.json
+++ b/_packages/code-gen/package.json
@@ -15,5 +15,6 @@
   "files": [
     "src/*"
   ],
-  "types": "index.d.ts"
+  "types": "index.d.ts",
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
