--- a/_packages/markdown/package.json
+++ b/_packages/markdown/package.json
@@ -20,5 +20,6 @@
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
-  }
+  },
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
