--- a/_packages/plugins/additional-pages/package.json
+++ b/_packages/plugins/additional-pages/package.json
@@ -9,5 +9,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "license": "ISC",
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
