--- a/_packages/plugins/clean-urls/package.json
+++ b/_packages/plugins/clean-urls/package.json
@@ -6,5 +6,10 @@
   "scripts": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
