--- a/_packages/plugins/format-vue/package.json
+++ b/_packages/plugins/format-vue/package.json
@@ -17,5 +17,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
