--- a/_packages/plugins/components/package.json
+++ b/_packages/plugins/components/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@minipress/plugin-components",
-  "version": "0.1.1-alpha.12",
+  "version": "0.1.1-alpha.11",
   "description": "",
   "main": "src/index.js",
-  "scripts": {},
   "dependencies": {
     "chokidar": "^3.2.1"
+  },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [],
   "author": "",
