--- a/_packages/plugins/package-json/package.json
+++ b/_packages/plugins/package-json/package.json
@@ -10,7 +10,12 @@
     "@minipress/types": "^0.1.1-alpha.12",
     "@types/fs-extra": "^8.0.0"
   },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
