--- a/_packages/plugins/pages/package.json
+++ b/_packages/plugins/pages/package.json
@@ -11,7 +11,12 @@
   "devDependencies": {
     "@minipress/types": "^0.1.1-alpha.12"
   },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
