--- a/_packages/plugins/site-data/package.json
+++ b/_packages/plugins/site-data/package.json
@@ -6,5 +6,6 @@
   "scripts": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
