--- a/_packages/utils/package.json
+++ b/_packages/utils/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.1-alpha.12",
   "description": "",
   "main": "src/index.js",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "jest ."
   },
@@ -17,5 +21,6 @@
     "@types/hash-sum": "^1.0.0",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
-  }
+  },
+  "gitHead": "f65e40942f64e041465bac879f0d85e7efc1d23e"
 }
