--- a/_packages/plugins/components/package.json
+++ b/_packages/plugins/components/package.json
@@ -12,5 +12,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "0afd5f7c7092ba4dec04a6e1ccb543b8b1fa828d"
 }
