--- a/_packages/code-gen/package.json
+++ b/_packages/code-gen/package.json
@@ -9,6 +9,10 @@
   "dependencies": {
     "prettier": "^1.18.2"
   },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@types/prettier": "^1.18.2"
   },
@@ -16,5 +20,5 @@
     "src/*"
   ],
   "types": "index.d.ts",
-  "gitHead": "0afd5f7c7092ba4dec04a6e1ccb543b8b1fa828d"
+  "gitHead": "6834ae276f728eaa582327af54c3ebebbab92ada"
 }
