--- a/_packages/page-renderer/package.json
+++ b/_packages/page-renderer/package.json
@@ -9,9 +9,13 @@
   "devDependencies": {
     "eslint": "^6.4.0"
   },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "types": "index.d.ts",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "gitHead": "0afd5f7c7092ba4dec04a6e1ccb543b8b1fa828d"
+  "gitHead": "6834ae276f728eaa582327af54c3ebebbab92ada"
 }
