--- a/_packages/markdown/package.json
+++ b/_packages/markdown/package.json
@@ -22,6 +22,7 @@
   },
   "types": "index.d.ts",
   "devDependencies": {
+    "@minipress/types": "0.1.1-alpha.15",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
   },
