--- a/_packages/markdown/package.json
+++ b/_packages/markdown/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "markdown-it-container": "^2.0.0",
     "@minipress/utils": "^0.1.1-alpha.15",
     "gray-matter": "^4.0.2",
     "prismjs": "^1.17.1",
