--- a/_packages/markdown/package.json
+++ b/_packages/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/markdown",
-  "version": "0.1.1-alpha.15",
+  "version": "0.1.1-alpha.16",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -14,16 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "markdown-it-container": "^2.0.0",
-    "@minipress/utils": "^0.1.1-alpha.15",
+    "@minipress/utils": "^0.1.1-alpha.16",
     "gray-matter": "^4.0.2",
+    "markdown-it-container": "^2.0.0",
     "prismjs": "^1.17.1",
     "saber-markdown": "^0.1.4",
     "slugo": "^0.3.1"
   },
   "types": "index.d.ts",
   "devDependencies": {
-    "@minipress/types": "0.1.1-alpha.15",
+    "@minipress/types": "^0.1.1-alpha.16",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
   },
