--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/minipress",
-  "version": "0.1.1-alpha.15",
+  "version": "0.1.1-alpha.16",
   "main": "src/index.js",
   "license": "MIT",
   "private": false,
@@ -16,25 +16,23 @@
     "minipress": "./src/cli/cli-entry.js"
   },
   "dependencies": {
-    "nanoid": "^2.1.1",
-    "webpackbar": "^4.0.0",
     "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@minipress/app": "^0.1.1-alpha.15",
-    "@minipress/code-gen": "^0.1.1-alpha.15",
-    "@minipress/head-element": "^0.1.1-alpha.15",
-    "@minipress/log": "^0.1.1-alpha.15",
-    "@minipress/plugin-format-markdown": "^0.1.1-alpha.15",
-    "@minipress/plugin-format-vue": "^0.1.1-alpha.15",
-    "@minipress/plugin-pages": "^0.1.1-alpha.15",
-    "@minipress/plugin-layouts": "^0.1.1-alpha.15",
-    "@minipress/plugin-components": "^0.1.1-alpha.15",
-    "@minipress/theme-default": "^0.1.1-alpha.15",
-    "@minipress/types": "^0.1.1-alpha.15",
-    "@minipress/utils": "^0.1.1-alpha.15",
+    "@minipress/app": "^0.1.1-alpha.16",
+    "@minipress/code-gen": "^0.1.1-alpha.16",
+    "@minipress/head-element": "^0.1.1-alpha.16",
+    "@minipress/log": "^0.1.1-alpha.16",
+    "@minipress/plugin-components": "^0.1.1-alpha.16",
+    "@minipress/plugin-format-markdown": "^0.1.1-alpha.16",
+    "@minipress/plugin-format-vue": "^0.1.1-alpha.16",
+    "@minipress/plugin-layouts": "^0.1.1-alpha.16",
+    "@minipress/plugin-pages": "^0.1.1-alpha.16",
+    "@minipress/theme-default": "^0.1.1-alpha.16",
+    "@minipress/types": "^0.1.1-alpha.16",
+    "@minipress/utils": "^0.1.1-alpha.16",
     "@types/fs-extra": "^8.0.0",
     "@types/joi": "^14.3.3",
     "autoprefixer": "^9.6.1",
@@ -60,6 +58,7 @@
     "less-loader": "^5.0.0",
     "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.8.0",
+    "nanoid": "^2.1.1",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "polka": "^0.5.2",
@@ -92,10 +91,11 @@
     "webpack-dev-middleware": "^3.7.1",
     "webpack-dev-server": "^3.8.0",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "webpackbar": "^4.0.0"
   },
   "devDependencies": {
-    "@minipress/eslint-config-node": "^0.1.1-alpha.15",
+    "@minipress/eslint-config-node": "^0.1.1-alpha.16",
     "@types/express": "^4.17.1",
     "@types/hash-sum": "^1.0.0",
     "@types/jest": "^24.0.18",
