--- a/_packages/plugins/custom-container/package.json
+++ b/_packages/plugins/custom-container/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/custom-container",
-  "version": "0.1.1-alpha.15",
+  "version": "0.1.1-alpha.16",
   "description": "my beautiful plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "markdown-it": "^10.0.0"
   },
   "devDependencies": {
-    "markdown-it": "^10.0.0",
-    "@minipress/types": "^0.1.1-alpha.15"
+    "@minipress/types": "^0.1.1-alpha.16",
+    "markdown-it": "^10.0.0"
   }
 }
