--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -53,7 +53,7 @@
     "gray-matter": "^4.0.2",
     "hash-sum": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "joi": "^14.3.1",
+    "@hapi/joi": "^16.1.5",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "loader-utils": "^1.2.3",
