--- a/_packages/head-element/package.json
+++ b/_packages/head-element/package.json
@@ -16,7 +16,7 @@
   },
   "types": "index.d.ts",
   "files": [
-    "src/*.js"
+    "src/**/*.js"
   ],
   "publishConfig": {
     "access": "public"
