--- a/_packages/plugins/custom-container/package.json
+++ b/_packages/plugins/custom-container/package.json
@@ -9,7 +9,7 @@
     "access": "public"
   },
   "files": [
-    "src/index.js"
+    "src/**/*"
   ],
   "main": "src/index.js",
   "dependencies": {
