--- a/_packages/plugins/last-modified/package.json
+++ b/_packages/plugins/last-modified/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "fs-extra": "^8.1.0"
   },
+  "files": [
+    "src/**/*"
+  ],
   "devDependencies": {
     "@types/fs-extra": "^8.0.0"
   },
