--- a/_examples/features/package.json
+++ b/_examples/features/package.json
@@ -15,8 +15,7 @@
     "gen:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minipress generate"
   },
   "files": [
-    "components/*",
-    "pages/*",
+    "src/**/*",
     ".minipress/config.js",
     "!.DS_Store"
   ],
