--- a/_packages/markdown/package.json
+++ b/_packages/markdown/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "jest ."
   },
+  "files": [
+    "src/**/*.js"
+  ],
   "private": false,
   "publishConfig": {
     "access": "public"
