--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -7,6 +7,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "src/**/*.js"
+  ],
   "scripts": {
     "lint": "eslint .",
     "test": "jest .",
