--- a/_packages/plugins/components/package.json
+++ b/_packages/plugins/components/package.json
@@ -10,6 +10,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "src/**/*"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
