--- a/_packages/plugins/format-markdown/package.json
+++ b/_packages/plugins/format-markdown/package.json
@@ -8,6 +8,9 @@
     "@minipress/markdown": "^0.1.1-alpha.18",
     "@minipress/utils": "^0.1.1-alpha.16"
   },
+  "files": [
+    "src/**/*"
+  ],
   "devDependencies": {
     "@minipress/types": "^0.1.1-alpha.18",
     "@types/jest": "^24.0.18",
