--- a/_packages/plugins/format-vue/package.json
+++ b/_packages/plugins/format-vue/package.json
@@ -12,6 +12,9 @@
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
   },
+  "files": [
+    "src/**/*"
+  ],
   "private": false,
   "publishConfig": {
     "access": "public"
