--- a/_packages/plugins/head/package.json
+++ b/_packages/plugins/head/package.json
@@ -10,6 +10,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "src/**/*"
+  ],
   "license": "ISC",
   "gitHead": "6834ae276f728eaa582327af54c3ebebbab92ada"
 }
