--- a/_packages/plugins/layouts/package.json
+++ b/_packages/plugins/layouts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-layouts",
-  "version": "0.1.1-alpha.18",
+  "version": "0.1.1-alpha.16",
   "description": "my beautiful plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -9,13 +9,13 @@
     "access": "public"
   },
   "files": [
-    "src/index.js"
+    "src/**/*"
   ],
   "main": "src/index.js",
   "dependencies": {
     "globby": "^10.0.1"
   },
   "devDependencies": {
-    "@minipress/types": "^0.1.1-alpha.18"
+    "@minipress/types": "^0.1.1-alpha.16"
   }
 }
