--- a/_packages/plugins/pages/package.json
+++ b/_packages/plugins/pages/package.json
@@ -8,6 +8,9 @@
     "@minipress/utils": "^0.1.1-alpha.16",
     "chokidar": "^3.1.1"
   },
+  "files": [
+    "src/**/*"
+  ],
   "devDependencies": {
     "@minipress/types": "^0.1.1-alpha.18"
   },
