--- a/_packages/plugins/theme-docs/package.json
+++ b/_packages/plugins/theme-docs/package.json
@@ -18,8 +18,7 @@
     "vue-router": "^3.1.3"
   },
   "files": [
-    "index.js",
-    "src/*"
+    "src/**/*"
   ],
   "dependencies": {
     "@minipress/custom-container": "^0.1.1-alpha.18"
