--- a/_support/eslint-config-node/package.json
+++ b/_support/eslint-config-node/package.json
@@ -21,5 +21,8 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "src/**/*"
+  ],
   "gitHead": "6834ae276f728eaa582327af54c3ebebbab92ada"
 }
