--- a/_support/type-check/package.json
+++ b/_support/type-check/package.json
@@ -8,6 +8,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "src/**/*"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
