--- a/_packages/plugins/custom-container/package.json
+++ b/_packages/plugins/custom-container/package.json
@@ -18,5 +18,6 @@
   "devDependencies": {
     "@minipress/types": "^0.1.1-alpha.19",
     "markdown-it": "^10.0.0"
-  }
+  },
+  "gitHead": "3653dfb7865b9228b51a94311fe5d9ad71be0a65"
 }
