--- a/snappy-apps/website/package.json
+++ b/snappy-apps/website/package.json
@@ -7,6 +7,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "snappy": {
+    "github": "https://github.com/ChristianKienle/minipress"
+  },
   "scripts": {
     "dev": "snappy-apps dev",
     "dev:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/snappy-apps dev",
@@ -16,7 +19,9 @@
     "gen:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/snappy-apps generate"
   },
   "devDependencies": {
-    "@snappy-apps/snappy-apps": "^0.1.1-alpha.22"
+    "@snappy-apps/snappy-apps": "^0.1.1-alpha.22",
+    "@minipress/plugin-package-json": "^0.1.1-alpha.19",
+    "@minipress/plugin-clean-urls": "^0.1.1-alpha.19"
   },
   "dependencies": {
     "@snappy-apps/theme-fiori": "^0.1.1-alpha.22"
