--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -1,9 +1,8 @@
 {
   "publicPath": "/minipress/",
   "all": [
-    "14.style.css",
-    "8.style.css",
-    "assets/js/14.js",
+    "28.style.css",
+    "9.style.css",
     "assets/js/15.js",
     "assets/js/16.js",
     "assets/js/17.js",
@@ -16,10 +15,13 @@
     "assets/js/24.js",
     "assets/js/25.js",
     "assets/js/26.js",
+    "assets/js/27.js",
+    "assets/js/28.js",
     "assets/js/app.js",
     "assets/js/page--0465cf8d.js",
     "assets/js/page--0783e11c.js",
     "assets/js/page--323ede5c.js",
+    "assets/js/page--361ef137.js",
     "assets/js/page--43fa1dd0.js",
     "assets/js/page--4dcd7602.js",
     "assets/js/page--651c311e.js",
@@ -37,9 +39,8 @@
     "assets/js/app.js"
   ],
   "async": [
-    "14.style.css",
-    "8.style.css",
-    "assets/js/14.js",
+    "28.style.css",
+    "9.style.css",
     "assets/js/15.js",
     "assets/js/16.js",
     "assets/js/17.js",
@@ -52,9 +53,12 @@
     "assets/js/24.js",
     "assets/js/25.js",
     "assets/js/26.js",
+    "assets/js/27.js",
+    "assets/js/28.js",
     "assets/js/page--0465cf8d.js",
     "assets/js/page--0783e11c.js",
     "assets/js/page--323ede5c.js",
+    "assets/js/page--361ef137.js",
     "assets/js/page--43fa1dd0.js",
     "assets/js/page--4dcd7602.js",
     "assets/js/page--651c311e.js",
@@ -68,332 +72,494 @@
   ],
   "modules": {
     "95a9d01c": [
-      29,
-      15
-    ],
-    "387ccf72": [
-      29,
-      15
-    ],
-    "d6ca716c": [
-      29,
-      15
-    ],
-    "acc75f10": [
-      29,
-      15
-    ],
-    "05092e67": [
-      29,
-      15
-    ],
-    "652aa772": [
-      29,
-      15
-    ],
-    "44813c9e": [
-      29,
-      15
-    ],
-    "09ac718a": [
-      29,
-      15
-    ],
-    "b7ff7c9c": [
-      29,
-      15
-    ],
-    "4079ede3": [
-      29,
-      15
-    ],
-    "651eea86": [
-      29,
-      15
-    ],
-    "65fdc71c": [
-      29,
-      15
-    ],
-    "88d21870": [
-      29,
-      15
-    ],
-    "4b24a4c6": [
-      29,
-      15
-    ],
-    "531a341c": [
-      29,
-      15
-    ],
-    "b99e1ffe": [
-      29,
-      15
-    ],
-    "051dac31": [
-      29,
-      15
-    ],
-    "22837b80": [
-      29,
-      15
-    ],
-    "c7879390": [
-      29,
-      15
-    ],
-    "030ce01d": [
-      29,
-      15
-    ],
-    "918f3b92": [
-      29,
-      15
-    ],
-    "bba014b0": [
-      29,
-      15
-    ],
-    "6a1d5d88": [
-      29,
-      15
-    ],
-    "9b555eb4": [
-      29,
-      15
-    ],
-    "3e2c3058": [
-      29,
-      15
-    ],
-    "62f10f8b": [
-      29,
-      15
-    ],
-    "29b594ba": [
-      29,
-      15
-    ],
-    "480a970d": [
-      29,
-      15
-    ],
-    "4a0aece6": [
-      29,
-      15
-    ],
-    "3276ead6": [
-      29,
-      15
-    ],
-    "a1f58df2": [
-      29,
-      15
-    ],
-    "c726fc3c": [
-      29,
-      15
-    ],
-    "18631b40": [
-      29,
-      15
-    ],
-    "552d95ec": [
-      29,
-      15
-    ],
-    "fb1b87bc": [
-      29,
-      15
-    ],
-    "6d00b364": [
-      29,
-      15
-    ],
-    "11bc3b25": [
-      29,
-      15
-    ],
-    "73a8f755": [
-      29,
-      15
-    ],
-    "f53cd648": [
-      29,
-      15
-    ],
-    "a9a99038": [
-      29,
-      15
-    ],
-    "68a06702": [
-      29,
-      15
-    ],
-    "5963f189": [
-      29,
-      15
-    ],
-    "02025afe": [
-      29,
-      15
-    ],
-    "76d094f0": [
-      29,
-      15
-    ],
-    "8b285d1a": [
-      29,
-      15
-    ],
-    "80b22308": [
-      19
-    ],
-    "488b4082": [
-      28
-    ],
-    "49e32d4d": [
-      26
-    ],
-    "f476e0b6": [
-      22
-    ],
-    "ff606dca": [
-      20
-    ],
-    "7e7c0028": [
-      27
-    ],
-    "5ca66e06": [
-      21
-    ],
-    "5f73d970": [
-      25
-    ],
-    "9cecf232": [
-      17
-    ],
-    "94490b0e": [
-      18
-    ],
-    "9bdbcd42": [
-      24
-    ],
-    "14b2b9c6": [
+      31,
       16
     ],
-    "694e1115": [
-      3
+    "387ccf72": [
+      31,
+      16
     ],
-    "6a35eb72": [
-      4
+    "6f1988c9": [
+      31,
+      16
     ],
-    "8fd397b8": [
-      5
+    "1304ad12": [
+      31,
+      16
     ],
-    "1859b268": [
-      6
+    "59b22688": [
+      31,
+      16
     ],
-    "4a4032d4": [
-      7
+    "b02d2474": [
+      31,
+      16
     ],
-    "7ffa19e9": [
-      8
+    "c77d53a0": [
+      31,
+      16
     ],
-    "3c090f6a": [
-      9
+    "1be05b89": [
+      31,
+      16
     ],
-    "e10410be": [
-      10
+    "28b79bd3": [
+      31,
+      16
     ],
-    "47d13f4a": [
-      11
+    "f35a86f8": [
+      31,
+      16
     ],
-    "caecdd10": [
-      12
+    "9bff78f6": [
+      31,
+      16
     ],
-    "999f045c": [
-      13
+    "9570e406": [
+      31,
+      16
     ],
-    "d55296ea": [
-      14
+    "30f06229": [
+      31,
+      16
     ],
-    "b8c3cb00": [
-      1,
-      23
+    "cff40476": [
+      31,
+      16
     ],
-    "690156de": [
-      0,
+    "c235819e": [
+      31,
+      16
+    ],
+    "2dec82bc": [
+      31,
+      16
+    ],
+    "4af67ad2": [
+      31,
+      16
+    ],
+    "d076fe02": [
+      31,
+      16
+    ],
+    "01593eba": [
+      31,
+      16
+    ],
+    "030ce01d": [
+      31,
+      16
+    ],
+    "918f3b92": [
+      31,
+      16
+    ],
+    "bba014b0": [
+      31,
+      16
+    ],
+    "6a1d5d88": [
+      31,
+      16
+    ],
+    "22e0f447": [
+      31,
+      16
+    ],
+    "2d5283f5": [
+      31,
+      16
+    ],
+    "10cc5e4a": [
+      31,
+      16
+    ],
+    "5bb0d944": [
+      31,
+      16
+    ],
+    "6afda7ae": [
+      31,
+      16
+    ],
+    "7ee9d807": [
+      31,
+      16
+    ],
+    "3c6d9795": [
+      31,
+      16
+    ],
+    "4c1d6146": [
+      31,
+      16
+    ],
+    "2e55c3fa": [
+      31,
+      16
+    ],
+    "590e033f": [
+      31,
+      16
+    ],
+    "13d3332a": [
+      31,
+      16
+    ],
+    "624a4f7a": [
+      31,
+      16
+    ],
+    "52b1fa2f": [
+      31,
+      16
+    ],
+    "a2573938": [
+      31,
+      16
+    ],
+    "10c11f94": [
+      31,
+      16
+    ],
+    "e9631706": [
+      31,
+      16
+    ],
+    "02bb8684": [
+      31,
+      16
+    ],
+    "68a06702": [
+      31,
+      16
+    ],
+    "5963f189": [
+      31,
+      16
+    ],
+    "02025afe": [
+      31,
+      16
+    ],
+    "76d094f0": [
+      31,
+      16
+    ],
+    "8b285d1a": [
+      31,
+      16
+    ],
+    "e22aaee4": [
       2
     ],
-    "0118eae2": [
-      29,
+    "ca94520e": [
+      2
+    ],
+    "f93372aa": [
+      3
+    ],
+    "2a7013d6": [
+      3
+    ],
+    "e2f373d2": [
+      4
+    ],
+    "3eb5aa0c": [
+      4
+    ],
+    "cef0b076": [
+      5
+    ],
+    "5e2cdeb0": [
+      5
+    ],
+    "7da7f8ee": [
+      6
+    ],
+    "43852c7e": [
+      6
+    ],
+    "7acd0a5c": [
+      7
+    ],
+    "69ceb0d1": [
+      7
+    ],
+    "9ad66704": [
+      8
+    ],
+    "9580ca9a": [
+      8
+    ],
+    "107b18d8": [
+      9
+    ],
+    "4d5d4d89": [
+      9
+    ],
+    "2918c530": [
+      10
+    ],
+    "23c328c6": [
+      10
+    ],
+    "253188fd": [
+      11
+    ],
+    "d2bf829c": [
+      11
+    ],
+    "4668791e": [
+      12
+    ],
+    "cd987748": [
+      12
+    ],
+    "8fe2fa6a": [
+      13
+    ],
+    "b16f2e94": [
+      13
+    ],
+    "bb34b784": [
+      14
+    ],
+    "069c561a": [
+      14
+    ],
+    "3e898de9": [
+      2
+    ],
+    "7fb9e770": [
+      2
+    ],
+    "a5f71024": [
+      3
+    ],
+    "4459b68d": [
+      3
+    ],
+    "c279f42a": [
+      4
+    ],
+    "71b86e85": [
+      4
+    ],
+    "1cabaade": [
+      5
+    ],
+    "065c61b2": [
+      5
+    ],
+    "722da8b1": [
+      6
+    ],
+    "1c669a12": [
+      6
+    ],
+    "904dc73c": [
+      7
+    ],
+    "21f525ca": [
+      7
+    ],
+    "283f58bc": [
+      8
+    ],
+    "21ba2928": [
+      8
+    ],
+    "125ac66c": [
+      9
+    ],
+    "43d8ce02": [
+      9
+    ],
+    "b28ecd74": [
+      10
+    ],
+    "3d9e72d6": [
+      10
+    ],
+    "795caa79": [
+      11
+    ],
+    "31c2dbeb": [
+      11
+    ],
+    "7e68304c": [
+      12
+    ],
+    "fe58e15a": [
+      12
+    ],
+    "44ec401c": [
+      13
+    ],
+    "82a7bca6": [
+      13
+    ],
+    "c202ecb6": [
+      14
+    ],
+    "394d83ac": [
+      14
+    ],
+    "40606ad2": [
+      2
+    ],
+    "cd07c518": [
+      3
+    ],
+    "5d5548e2": [
+      4
+    ],
+    "e7e4d964": [
+      5
+    ],
+    "f3b2cd58": [
+      6
+    ],
+    "21e584b2": [
+      7
+    ],
+    "6ec34a89": [
+      8
+    ],
+    "0bb05f42": [
+      9
+    ],
+    "f029ff1a": [
+      10
+    ],
+    "0a03fe88": [
+      11
+    ],
+    "1eaeb9fa": [
+      12
+    ],
+    "3e6e0454": [
+      13
+    ],
+    "0625546e": [
+      14
+    ],
+    "195c653a": [
+      21
+    ],
+    "d58b2406": [
+      30
+    ],
+    "4c86b04f": [
+      28
+    ],
+    "1650993a": [
+      24
+    ],
+    "3ddf6e1d": [
+      22
+    ],
+    "1c6557ac": [
+      29
+    ],
+    "e0853982": [
+      1,
+      25
+    ],
+    "68d8e388": [
+      23
+    ],
+    "4a051872": [
+      27
+    ],
+    "74a7eade": [
+      20
+    ],
+    "35aeaf69": [
+      18
+    ],
+    "93493b92": [
+      19
+    ],
+    "e2f539c6": [
+      26
+    ],
+    "c01f7f70": [
+      17
+    ],
+    "700477f2": [
+      0,
       15
     ],
-    "134e3d96": [
-      29,
-      15
+    "6635f364": [
+      31,
+      16
     ],
-    "3f9a932b": [
-      29,
-      15
+    "eee179d6": [
+      31,
+      16
     ],
-    "2e133588": [
-      29,
-      15
+    "f5193c68": [
+      31,
+      16
     ],
-    "bcf1614a": [
-      29,
-      15
+    "12f4e272": [
+      31,
+      16
     ],
-    "30fcc71c": [
-      29,
-      15
+    "313fc408": [
+      31,
+      16
     ],
-    "34ac8c48": [
-      29,
-      15
+    "5cdb0ad3": [
+      31,
+      16
     ],
-    "1c1b54c6": [
-      29,
-      15
+    "328b12db": [
+      31,
+      16
     ],
-    "00b800c8": [
-      29,
-      15
+    "6b651ba7": [
+      31,
+      16
     ],
-    "496099c7": [
-      29,
-      15
+    "4c85589b": [
+      31,
+      16
     ],
-    "4421658e": [
-      29,
-      15
+    "07e28e46": [
+      31,
+      16
     ],
-    "2dbec091": [
-      29,
-      15
+    "ddfa82e6": [
+      31,
+      16
     ],
-    "4638dde6": [
-      29,
-      15
+    "fb308e9c": [
+      31,
+      16
     ],
-    "aba3dec0": [
-      29,
-      15
+    "22bc5fae": [
+      31,
+      16
     ],
-    "7fe367dc": [
-      29,
-      15
+    "873c0ac2": [
+      31,
+      16
     ],
-    "e4793d40": [
-      29,
-      15
+    "049ac1fd": [
+      31,
+      16
     ],
-    "72d97346": [
-      29,
-      15
+    "684222df": [
+      31,
+      16
+    ],
+    "bddbf048": [
+      31,
+      16
     ]
   }
 }
