--- a/_packages/plugins/pages/package.json
+++ b/_packages/plugins/pages/package.json
@@ -6,7 +6,8 @@
   "scripts": {},
   "dependencies": {
     "@minipress/utils": "^0.1.1-alpha.19",
-    "chokidar": "^3.1.1"
+    "chokidar": "^3.1.1",
+    "globby": "^10.0.1"
   },
   "files": [
     "src/**/*"
