--- a/_packages/plugins/pages/package.json
+++ b/_packages/plugins/pages/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.1-alpha.19",
   "description": "",
   "main": "src/index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest ."
+  },
   "dependencies": {
     "@minipress/utils": "^0.1.1-alpha.19",
-    "chokidar": "^3.1.1",
+    "chokidar": "^3.2.1",
     "globby": "^10.0.1"
   },
   "files": [
     "src/**/*"
   ],
   "devDependencies": {
+    "fs-extra": "^8.1.0",
+    "@types/fs-extra": "^8.0.0",
+    "jest": "^24.9.0",
+    "@types/jest": "^24.0.18",
     "@minipress/types": "^0.1.1-alpha.19"
   },
   "private": false,
