--- a/_packages/utils/package.json
+++ b/_packages/utils/package.json
@@ -12,17 +12,20 @@
     "typecheck": "tsc --project ."
   },
   "files": [
-    "src/**/*.js"
+    "src/**/*.js",
+    "**/*.d.ts"
   ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^3.2.1",
     "hash-sum": "^2.0.0",
     "devalue": "^2.0.0"
   },
   "types": "index.d.ts",
   "devDependencies": {
+    "@types/chokidar": "^2.1.3",
     "@types/hash-sum": "^1.0.0",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
